# ledgermem-pydantic-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ledgermem_pydantic_ai/: __init__.py  adapter.py
tests/: test_smoke.py
